# MyPersonalKitchenBot

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py  google_cfg.json  google_vision_recognizer.py  misc.py
app/dictionaries/: food_recognise.dict  rec_eng_rus.dict
app/filters/: __init__.py  is_reply.py
app/handlers/: __init__.py
app/handlers/callback/: __init__.py  (+23 more)
app/middlewares/: __init__.py  acl.py
app/models/: __init__.py  base.py  chat.py  product.py  shopping_list.py  shopping_list_to_product.py  user.py  user_settings  user_settings.py
app/notification/: frequence_notifications.py  weekly_notification.py
app/recipe_parser/: parser.py  recipe_models.py
app/states/: __init__.py  state_change_product.py  state_day_of_week.py  state_expiration_date.py  state_freq_number.py  state_fridge_add_photo.py  state_fridge_product.py  state_ingredients.py  state_recipe_search.py  state_shop_list_add_photo.py  state_shop_list_product.py
app/utils/: __init__.py  broadcaster.py  default_commands.py  logger.py  notify_admins.py
migrations/: env.py
migrations/versions/: 0b4025914a12_update_user_language.py  4d7180049274_add_shopping_list_model.py  502a7e5c17ab_user_settings.py  591a6187bf30_seed_fake_products.py  5f4c92631cd8_modify_user_entity.py  6139bb48f1c8_enables_notifications_frequency.py  9106395c2f3d_add_automatic_bought_date_column.py  ad78211113eb_init.py  b1ebe6dc222c_add_shopping_list_to_product_relation.py  e3aac87cd050_create_last_day_notify_column.py  f3013bfeff2e_add_product_model.py
(+64 files in other folders)
