[tool.poetry]
name = "aiogram_template"
version = "0.1.0"
description = ""
authors = ["0Kit <kostyajog@mail.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "2.10.1"
aioredis = "1.3.1"
alembic = "1.4.3"
environs = "9.0.0"
gino = "1.0.1"
loguru = "0.5.3"
sqlalchemy = "1.3.20"
psycopg2-binary = "^2.8.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
