[tool.poetry]
name = "aiogram_template"
version = "0.1.0"
description = ""
authors = ["0Kit <kostyajog@mail.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "2.10.1"
aioredis = "1.3.1"
alembic = "1.4.3"
environs = "9.0.0"
gino = "1.0.1"
loguru = "0.5.3"
sqlalchemy = "1.3.20"
psycopg2-binary = "^2.8.6"
numpy = "^1.20.1"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
grequests = "^0.6.0"
schedule = "^1.0.0"
APScheduler = "^3.7.0"
cv = "^1.0.0"
opencv-contrib-python = "^4.5.1"
google-cloud-vision = "^2.3.0"
google-api-python-client = "^2.1.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
